--- a/vitebs/src/Pages/Scanner.css
+++ b/vitebs/src/Pages/Scanner.css
@@ -5,36 +5,37 @@
     justify-content: center; /* Center the content horizontally */
     align-items: center;
     margin-bottom: 30px;
+    gap: 20px; /* Adds spacing between the upload button and search button */
 }
+
 
 .file-input {
     margin-right: 10px;
     padding: 10px;
-    border: 2px solid #3c7f72;
+    border: 2px solid #308c54;
     border-radius: 5px;
     transition: border-color 0.3s;
     cursor: pointer;
 }
 
 .file-input:hover {
-    border-color: #ffffff8c;
+    border-color: #308c54;
 }
 
 .search-button {
     padding: 10px 20px;
-    background-color: #3c7f72;
-    color: white;
+    background-color: #308c54;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
-    color: black;
+    color: #184529;
     
     
 }
 
 .search-button:hover {
-    background-color: #ffffff;
+    background-color: #256d41;
 }
 
 .image-gallery {
@@ -46,7 +47,7 @@
 
 .image-wrapper {
     margin: 10px;
-    border: 2px solid #ddd;
+    border: 2px solid #308c54;
     border-radius: 5px;
     overflow: hidden;
     transition: transform 0.2s;
@@ -101,10 +102,10 @@ input[type="file"] {
 }
 
 .upload-button{
-    font-size: 26px;
-    color: #20a47e;
-    background-color: #0a372a;
-    padding: 20px;
+    font-size: 20px;
+    color: #184529;
+    background-color: #308c54;
+    padding: 18px;
     border-radius: 40px;
     cursor: pointer;
     transition: 250ms;
@@ -113,7 +114,7 @@ input[type="file"] {
 .upload-button:hover{
     font-size: 26px;
     color: #20a47e;
-    background-color: #082f24;
+    background-color: #23693e;
     padding: 20px;
     border-radius: 40px;
     cursor: pointer;
